from django.db import models
from django.core.validators import MinValueValidator


class Order(models.Model):
    STATUS_CHOICES = [
        ('PENDING', 'Pending'),
        ('CONFIRMED', 'Confirmed'),
        ('PAID', 'Paid'),
        ('SHIPPING', 'Shipping'),
        ('COMPLETED', 'Completed'),
        ('CANCELLED', 'Cancelled'),
    ]
    customer_id = models.IntegerField()
    total_amount = models.DecimalField(max_digits=10, decimal_places=2, default=0)
    status = models.CharField(max_length=20, choices=STATUS_CHOICES, default='PENDING')
    shipping_address = models.TextField(blank=True, default='')
    payment_method = models.CharField(max_length=20, blank=True, default='COD')
    shipping_method = models.CharField(max_length=20, blank=True, default='STANDARD')
    created_at = models.DateTimeField(auto_now_add=True)

    def __str__(self):
        return f"Order #{self.id} - {self.status}"


class OrderItem(models.Model):
    order = models.ForeignKey(Order, on_delete=models.CASCADE, related_name='items')
    book_id = models.IntegerField()
    quantity = models.IntegerField(validators=[MinValueValidator(1)])
    price = models.DecimalField(max_digits=10, decimal_places=2)

    def __str__(self):
        return f"Book {self.book_id} x{self.quantity}"


class SagaLog(models.Model):
    order = models.ForeignKey(Order, on_delete=models.CASCADE, related_name='saga_logs')
    step = models.CharField(max_length=50)
    status = models.CharField(max_length=20)  # SUCCESS, FAILED, COMPENSATED
    details = models.TextField(blank=True, default='')
    created_at = models.DateTimeField(auto_now_add=True)

    def __str__(self):
        return f"Saga {self.order_id} - {self.step}: {self.status}"
